# fast-api-template

./: Makefile  README.md  pyproject.toml
app/: main.py  models.py
openapi/: schema.yml
